--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -27,7 +27,7 @@
 
           <form class="row col-sm-12 col-md-12 col-lg-12" >
 
-            <div class="container" ng-if="tabsIndex == 0" >
+            <div class="container" ng-show="tabsIndex == 0" >
               <!-- INFO CLIENTE -->
               <header-client></header-client>
               <!--  END INFO CLIENTE -->
@@ -99,7 +99,7 @@
 
 
             </div>
-            <div class="container" ng-if="tabsIndex == 1" >
+            <div class="container" ng-show="tabsIndex == 1" >
               <div class="row" >
 
                   <div class="col-12">
@@ -110,7 +110,7 @@
               </div>
 
             </div>
-            <div class="container" ng-if="tabsIndex == 1" style="margin-top: 32px;">
+            <div class="container" ng-show="tabsIndex == 1" style="margin-top: 32px;">
 
               <div class="form-group" >
                 <table class="table">
