--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -421,7 +421,7 @@
                   </div>
 
               </div>
-              <div ng-if="showProductTable" >
+              <div  >
 
                 <table datatable="ng" dt-options="dtOptionsProd"  class="table table-striped table-bordered" >
                   <thead>
