--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -32,7 +32,7 @@
               <header-client></header-client>
               <!--  END INFO CLIENTE -->
               <div ng-show="!hasUserClient">
-                <div class="">
+                <div class="row">
                   <div class="col-sm-12 col-md-6 col-lg-6">
                     <label for="clientes">Busqueda por cliente</label>
                     <div class="input-group mb-3">
@@ -375,6 +375,7 @@
               </div>
               <div id="infoProduct" class="row" >
 
+
                   <div class="col-4">
                     <label>Codigo</label>
                     <input type="text" ng-disabled="true" ng-model="articulo.COD_PRODUCTO" class="form-control" placeholder="no_arti">
@@ -388,10 +389,10 @@
                     <input type="text"ng-disabled="true" ng-model="articulo.existencia" class="form-control" placeholder="existencia">
                   </div>
 
-                  <div class="col-12">
+                  <!-- <div class="col-12">
                     <label></label>
                     <button type="button" ng-disabled="productIndex==-1" class="btn btn-success" style="margin-top: 32px;" ng-click="addArtPedido();">Agregar</button>
-                  </div>
+                  </div> -->
 
                   <div class="row">
                     <div class="mt-3 col-sm-12 col-md-12 col-lg-12">
@@ -421,7 +422,7 @@
                   </div>
 
               </div>
-              <div  >
+              <div ng-if="showProductTable" >
 
                 <table datatable="ng" dt-options="dtOptionsProd"  class="table table-striped table-bordered" >
                   <thead>
@@ -466,6 +467,7 @@
         <div class="modal-footer">
 
           <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+          <button type="button" ng-disabled="productIndex==-1" class="btn btn-success" style="margin-top: 32px;" ng-click="addArtPedido();">Agregar</button>
         </div>
       </div>
     </div>
