--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -209,15 +209,24 @@
         </button>
       </div>
       <div class="modal-body">
-        <div class="row">
+        <ul class="nav nav-tabs mb-4">
+            <li class="nav-item">
+              <a class="nav-link " ng-class="{ active : tabsIndex == 0 }" ng-click="goToTab(0)" >Informacion Cliente <span class="badge badge-secondary">1</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" ng-class="{ active : tabsIndex == 1 }" ng-disabled="!showProductTable" ng-click="goToTab(1)" >Detalle de pedido <span class="badge badge-secondary">2</span></a>
+            </li>
+        </ul>
 
-          <header-client></header-client>
+        <div class="">
+
 
           <form class="col-sm-12 col-md-12 col-lg-12">
 
-          <div class="container">
+          <div class="container" ng-show="tabsIndex == 0"  >
 
             <div ng-show="!hasUserClient">
+              <header-client></header-client>
 
               <div class="row pb-2 p-2" >
                   <div class="col-md-6">
@@ -264,7 +273,7 @@
           <!-- </div> -->
 
           </div>
-          <div class="container" ng-show="editView"  >
+          <div class="container" ng-show="tabsIndex == 1 && editView"  >
 
             <div class="row"  >
 
@@ -277,7 +286,7 @@
 
 
           </div>
-          <div class="container" style="margin-top: 32px;">
+          <div class="container"  style="margin-top: 32px;" ng-show="tabsIndex == 1"  >
 
 
             <div class="col-12 col-sm-12 col-md-12 col-lg-12">
