--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -190,7 +190,7 @@
         </div>
       </div>
       <div class="modal-footer" style="display: block;margin: 0 auto;">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal" ng-click="reset();">Cerrar</button>
+        <button type="button" class="btn btn-error" data-dismiss="modal" ng-click="reset();">Cerrar</button>
         <button type="button"  class="btn btn-success" ng-disabled="pedido.pedido.length < 1" ng-click="addPedido();">Enviar pedido</button>
       </div>
     </div>
