--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -162,7 +162,7 @@
                                     <td class="left">
                                         <strong class="text-dark">Total (con iva)</strong>
                                     </td>
-                                    <td class="right">{{formato(2,totales.bolivares + totales.bsIVA)}}</td>
+                                    <td class="right">{{formato(2,totales.bsConIva)}}</td>
                                 </tr>
                                 <tr>
                                     <td class="left">
@@ -174,7 +174,7 @@
                                     <td class="left">
                                         <strong class="text-dark">Total USD (con iva)</strong> </td>
                                     <td class="right">
-                                        <strong class="text-dark">{{formato(3,totales.USDIVA)}}</strong>
+                                        <strong class="text-dark">{{formato(3,totales.UsdConIva)}}</strong>
                                     </td>
                                 </tr>
                             </tbody>
