--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -59,7 +59,7 @@
                         <p class="mb-1" style="text-transform: capitalize;" >{{client.nombre_cliente.toLowerCase()}}</p>
                         <p>{{client.telefono1}}</p>
                         <p class="mb-1">{{client.direccion_cliente.toLowerCase()}}</p>
-                        <!-- <p class="mb-1"><span class="text-muted">Plazo: </span> {{client.v_plazo}}</p> -->
+                        <p class="mb-1"><span class="text-muted">Plazo de pago: </span> {{client.v_plazo}} dias</p>
                     </div>
 
                     <div class="col-md-6 text-right">
