--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -232,9 +232,9 @@
                   <div class="col-md-6">
                       <p class="font-weight-bold mb-4">Informacion del Cliente </p>
                       <p class="mb-1" style="text-transform: capitalize;" >{{client.nombre_cliente.toLowerCase()}}</p>
-                      <!-- <p>Acme Inc</p> -->
+                      <p>{{client.telefono1}}</p>
                       <p class="mb-1">{{client.direccion_cliente.toLowerCase()}}</p>
-                      <!-- <p class="mb-1">6781 45P</p> -->
+                      <p class="mb-1"><span class="text-muted">Plazo de pago: </span> {{client.v_plazo}} dias</p>
                   </div>
 
                   <div class="col-md-6 text-right">
@@ -244,6 +244,7 @@
                       <p class="mb-1" style="text-transform: capitalize;"><span class="text-muted">Encargado: </span> {{client.nombre_encargado.toLowerCase()}}</p>
                   </div>
               </div>
+
             </div>
 
             <div class="row">
