--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -70,6 +70,22 @@
                         <p class="mb-1" style="text-transform: capitalize;"><span class="text-muted">persona contacto área crédito y cobranzas: </span> {{client.v_persona_cyc.toLowerCase()}}</p>
                     </div>
                 </div>
+                <div class="row">
+
+                  <div class="col-6">
+                    <label>Credito disponible Bs.S</label><br>
+                    <span >{{formato(2,(creditoClient.disp_bs)? creditoClient.disp_bs:0)}}</span>
+
+                  </div>
+
+                  <div class="col-6">
+                    <label>Credito disponible USD</label><br>
+                    <span >{{formato(3,(creditoClient.disp_usd)? creditoClient.disp_usd:0)}}</span>
+
+                  </div>
+
+                </div>
+
               </div>
 
             <div class="row">
@@ -243,6 +259,21 @@
                       <p class="mb-1"><span class="text-muted">Codigo: </span> {{pedido.no_cliente}}</p>
                       <p class="mb-1" style="text-transform: capitalize;"><span class="text-muted">Encargado: </span> {{client.nombre_encargado.toLowerCase()}}</p>
                   </div>
+              </div>
+              <div class="row">
+
+                <div class="col-6">
+                  <label>Credito disponible Bs.S</label><br>
+                  <span >{{formato(2,(creditoClient.disp_bs)? creditoClient.disp_bs:0)}}</span>
+
+                </div>
+
+                <div class="col-6">
+                  <label>Credito disponible USD</label><br>
+                  <span >{{formato(3,(creditoClient.disp_usd)? creditoClient.disp_usd:0)}}</span>
+
+                </div>
+
               </div>
 
             </div>
