--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -310,13 +310,13 @@
 
               <div class="col-6">
                 <label>Credito disponible Bs.S</label><br>
-                <span >{{formato(2,(creditoClient.disp_bs)? creditoClient.disp_bs:0)}}</span>
+                <span >{{formato(2,(creditoClient.disp_bs_format)? creditoClient.disp_bs_format:0)}}</span>
 
               </div>
 
               <div class="col-6">
                 <label>Credito disponible USD</label><br>
-                <span >{{formato(3,(creditoClient.disp_usd)? creditoClient.disp_usd:0)}}</span>
+                <span >{{formato(3,(creditoClient.disp_usd_format)? creditoClient.disp_usd_format:0)}}</span>
 
               </div>
 
