--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -255,7 +255,7 @@
                   <div class="col-md-6 text-right">
                       <p class="font-weight-bold mb-4">Detalles</p>
                       <p class="mb-1"><span class="text-muted">Identificacion: </span> {{client.docu_identif_cliente}}</p>
-                      <p class="mb-1"><span class="text-muted">Codigo: </span> {{client.no_cliente}}</p>
+                      <p class="mb-1"><span class="text-muted">Codigo: </span> {{client.cod_cliente}}</p>
                       <p class="mb-1" style="text-transform: capitalize;"><span class="text-muted">Encargado: </span> {{client.nombre_encargado.toLowerCase()}}</p>
                       <p class="mb-1"><span class="text-muted">Plazo de pago: </span> {{client.v_plazo}} dias</p>
                   </div>
