--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -23,7 +23,7 @@
         </ul>
 
 
-        <div class="">
+        <div class="modal-body-he">
 
           <form class="row col-sm-12 col-md-12 col-lg-12" >
 
@@ -234,7 +234,7 @@
             </li>
         </ul>
 
-        <div class="">
+        <div class="modal-body-he">
 
 
           <form class="col-sm-12 col-md-12 col-lg-12">
