--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -111,8 +111,8 @@
               </div>
 
             </div>
-            <div class="container" ng-show="tabsIndex == 1" style="margin-top: 32px;">
-              <div class="row mt-5 mb-5">
+            <div class="container" ng-show="tabsIndex == 1" >
+              <div class="row mt-3 mb-5">
 
                 <div class="col-6">
                   <label>Credito disponible Bs.S</label><br>
