--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -100,30 +100,26 @@
 
 
             </div>
-            <div class="container" ng-show="tabsIndex == 1" >
-              <div class="row" >
 
-                  <div class="col-12">
-                    <label></label>
-                    <button type="button" class="btn btn-success" style="margin-top: 32px;" data-toggle="modal" data-target="#modalproduct">Agregar Productos</button>
-                  </div>
-
-              </div>
-
-            </div>
             <div class="container" ng-show="tabsIndex == 1" >
               <div class="row mt-3 mb-5">
 
-                <div class="col-6">
+
+                <div class="col-4">
                   <label>Credito disponible Bs.S</label><br>
                   <span >{{formato(2,(creditoClient.disp_bs_format)? (creditoClient.disp_bs_format - totales.bsConIva):0)}}</span>
 
                 </div>
 
-                <div class="col-6">
+                <div class="col-4">
                   <label>Credito disponible USD</label><br>
                   <span >{{formato(3,(creditoClient.disp_usd_format)? (creditoClient.disp_usd_format - totales.UsdConIva):0)}}</span>
 
+                </div>
+
+                <div class="col-4">
+                  <label></label>
+                  <button type="button" class="btn btn-success"  data-toggle="modal" data-target="#modalproduct">Agregar Productos</button>
                 </div>
 
               </div>
@@ -291,16 +287,6 @@
           <!-- </div> -->
 
           </div>
-          <div class="container" ng-show="tabsIndex == 1 && editView"  >
-
-            <div class="row"  >
-
-              <div class="col-12">
-                <label></label>
-                <button type="button" class="btn btn-success" style="margin-top: 32px;" data-toggle="modal" data-target="#modalproduct">Agregar Productos</button>
-              </div>
-
-          </div>
 
 
           </div>
@@ -308,16 +294,21 @@
 
             <div class="row mt-5 mb-5">
 
-              <div class="col-6">
+              <div class="col-4">
                 <label>Credito disponible Bs.S</label><br>
                 <span >{{formato(2,(creditoClient.disp_bs_format)? (creditoClient.disp_bs_format - totales.bsConIva):0)}}</span>
 
               </div>
 
-              <div class="col-6">
+              <div class="col-4">
                 <label>Credito disponible USD</label><br>
                 <span >{{formato(3,(creditoClient.disp_usd_format)? (creditoClient.disp_usd_format - totales.UsdConIva):0)}}</span>
 
+              </div>
+
+              <div class="col-4">
+                <label></label>
+                <button type="button" ng-show="editView" class="btn btn-success" style="margin-top: 32px;" data-toggle="modal" data-target="#modalproduct">Agregar Productos</button>
               </div>
 
             </div>
@@ -420,56 +411,58 @@
 
         </div>
         <div class="modal-body">
+          <div id="infoProduct" class="row" >
+
+
+              <div class="col-4">
+                <label>Codigo</label>
+                <input type="text" ng-disabled="true" ng-model="articulo.COD_PRODUCTO" class="form-control" placeholder="no_arti">
+                <span >{{articulo.COD_PRODUCTO}}</span>
+              </div>
+              <div class="col-4">
+                <label>Cantidad</label>
+                <input type="number"  min="1" max="{{articulo.existencia}}" ng-model="articulo.CANTIDAD" class="form-control" placeholder="cantidad" onkeypress='return event.charCode >= 48 && event.charCode <= 57' >
+              </div>
+              <div class="col-4">
+                <label>Existencia</label>
+                <span >{{articulo.existencia}}</span>
+              </div>
+
+              <!-- <div class="col-12">
+                <label></label>
+                <button type="button" ng-disabled="productIndex==-1" class="btn btn-success" style="margin-top: 32px;" ng-click="addArtPedido();">Agregar</button>
+              </div> -->
+
+              <div class="row">
+                <div class="mt-3 col-sm-12 col-md-12 col-lg-12">
+
+                  <label>Precios</label>
+                </div>
+                <div class="col-3">
+                  <label>Por unidad Bs.S</label><br>
+                  <span >{{formato(2,(articulo.PRECIO)? articulo.PRECIO:0)}}</span>
+
+                </div>
+                <div class="col-3">
+                  <label>Total Bs.S</label><br>
+                  <span >{{formato(2,(articulo.PRECIO)? (articulo.PRECIO  * articulo.CANTIDAD):0)}}</span>
+
+                </div>
+                <div class="col-3">
+                  <label>Por unidad USD</label><br>
+                  <span >{{formato(2,(articulo.precio_usd)? articulo.precio_usd:0)}}</span>
+
+                </div>
+                <div class="col-3">
+                  <label>Total USD</label><br>
+                  <span >{{formato(2,(articulo.precio_usd)? (articulo.precio_usd  * articulo.CANTIDAD):0)}}</span>
+
+                </div>
+              </div>
+
+          </div>
           <div class="modal-body-he">
-            <div id="infoProduct" class="row" >
 
-
-                <div class="col-4">
-                  <label>Codigo</label>
-                  <input type="text" ng-disabled="true" ng-model="articulo.COD_PRODUCTO" class="form-control" placeholder="no_arti">
-                </div>
-                <div class="col-4">
-                  <label>Cantidad</label>
-                  <input type="number"  min="1" max="{{articulo.existencia}}" ng-model="articulo.CANTIDAD" class="form-control" placeholder="cantidad" onkeypress='return event.charCode >= 48 && event.charCode <= 57' >
-                </div>
-                <div class="col-4">
-                  <label>Existencia</label>
-                  <input type="text"ng-disabled="true" ng-model="articulo.existencia" class="form-control" placeholder="existencia">
-                </div>
-
-                <!-- <div class="col-12">
-                  <label></label>
-                  <button type="button" ng-disabled="productIndex==-1" class="btn btn-success" style="margin-top: 32px;" ng-click="addArtPedido();">Agregar</button>
-                </div> -->
-
-                <div class="row">
-                  <div class="mt-3 col-sm-12 col-md-12 col-lg-12">
-
-                    <label>Precios</label>
-                  </div>
-                  <div class="col-3">
-                    <label>Por unidad Bs.S</label><br>
-                    <span >{{formato(2,(articulo.PRECIO)? articulo.PRECIO:0)}}</span>
-
-                  </div>
-                  <div class="col-3">
-                    <label>Total Bs.S</label><br>
-                    <span >{{formato(2,(articulo.PRECIO)? (articulo.PRECIO  * articulo.CANTIDAD):0)}}</span>
-
-                  </div>
-                  <div class="col-3">
-                    <label>Por unidad USD</label><br>
-                    <span >{{formato(2,(articulo.precio_usd)? articulo.precio_usd:0)}}</span>
-
-                  </div>
-                  <div class="col-3">
-                    <label>Total USD</label><br>
-                    <span >{{formato(2,(articulo.precio_usd)? (articulo.precio_usd  * articulo.CANTIDAD):0)}}</span>
-
-                  </div>
-                </div>
-
-            </div>
             <div class="container">
 
               <div class="col-sm-12 col-md-12 col-lg-12">
