--- a/app/comps/usuarios/usuarios.html
+++ b/app/comps/usuarios/usuarios.html
@@ -72,7 +72,7 @@
           </select>
         </div>
 
-        <div class="row" ng-if="!hasUserClient">
+        <div class="row" ng-show="!hasUserClient">
           <div class="col-sm-12 col-md-6 col-lg-6">
             <label for="clientes">Busqueda por cliente</label>
             <div class="input-group mb-3">
