--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -221,6 +221,12 @@
         </button>
       </div>
       <div class="modal-body">
+        <div class="card-header">
+          Fecha:
+          <strong>{{pedido.fecha}}</strong>
+            <span class="float-right"> <strong>Estatus:</strong> {{pedido.estatus}}</span>
+
+          </div>
         <ul class="nav nav-tabs mb-4">
             <li class="nav-item">
               <a class="nav-link " ng-class="{ active : tabsIndex == 0 }" ng-click="goToTab(0)" >Informacion Cliente <span class="badge badge-secondary">1</span></a>
@@ -267,13 +273,13 @@
                   <input type="text" ng-model="pedido.no_factu" class="form-control" placeholder="no_factura">
                 </div>
               </div>
-              <div class="col-sm-12 col-md-4 col-lg-4">
+              <div class="col-sm-12 col-md-4 col-lg-4" style="display: none;">
                 <div class="form-group">
                   <label>Fecha</label>
                   <input type="date" ng-disabled="true" ng-model="pedido.fecha" class="form-control" placeholder="fecha">
                 </div>
               </div>
-              <div class="col-sm-12 col-md-8 col-lg-8">
+              <div class="col-sm-12 col-md-12 col-lg-12">
 
 
                 <div class="form-group">
