--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -438,7 +438,7 @@
                 </div> -->
 
                 <div class="row col-sm-12 col-md-12 col-lg-12">
-                  <div class="mt-3 ">
+                  <div class="col-sm-12 col-md-12 col-lg-12 mt-3 ">
 
                     <label>Precios</label>
                   </div>
