--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -130,6 +130,7 @@
                         <tr>
                         <!-- <th scope="col"><p class="text-center">#</p></th> -->
                         <th scope="col"><p class="text-center">Codigo de Articulo</p></th>
+                        <th scope="col"><p class="text-center">Nombre Articulo</p></th>
                         <th scope="col"><p class="text-center">Cantidad</p></th>
                         <th scope="col"><p class="text-center">Precio por unidad</p></th>
                         <th scope="col"><p class="text-center">Total</p></th>
@@ -141,6 +142,7 @@
                         <tr ng-repeat="x in pedido.pedido">
                             <!-- <th scope="row">{{ $index + 1 }}</th> -->
                             <td><p class="text-center">{{ x.COD_PRODUCTO }}</p></td>
+                            <td><p class="text-center">{{ x.nombre_producto }}</p></td>
                             <td><p class="text-center">{{ x.CANTIDAD }}</p></td>
                             <td><p class="text-right">{{ formato(2,x.PRECIO) }}</p></td>
                             <td><p class="text-right">{{ formato(2,(x.PRECIO * x.CANTIDAD)) }}</p></td>
